--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SnowFlakes' Personal Blog</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>About Me | My Personal Blog</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
@@ -13,13 +13,11 @@
     <header>
         <div class="container header-content">
             <div class="logo">My<span>Blog</span>.</div>
-            
             <div class="menu-toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
-
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
@@ -49,7 +47,7 @@
                         <li><strong>University:</strong> FIT - Hanoi University</li>
                     </ul>
 
-                    <article class="bio">
+                    <div class="bio">
                         <p>
                             I am a passionate <b>web developer</b> who loves building interactive applications. 
                             My journey began when I wrote my first line of <i>HTML code</i> in high school. 
@@ -57,19 +55,19 @@
                             Currently, I am focusing on mastering <i>Full Stack Development</i> and AI integration. 
                             In my free time, I enjoy exploring the <b>streets of Hanoi</b> with my camera.
                         </p>
-                    </article>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section class="quote-section">
+        <div class="quote-section">
             <blockquote>
                 "The only way to do great work is to love what you do."
                 <cite>- Steve Jobs</cite>
             </blockquote>
-        </section>
+        </div>
 
-        <section id="resume" class="content-grid">
+        <div id="resume" class="content-grid">
             <article class="card">
                 <h2><i class="fas fa-trophy"></i> Achievements</h2>
                 <ul>
@@ -94,7 +92,7 @@
                     <li><strong>Freelance Designer</strong> (2022 - Present)</li>
                 </ul>
             </article>
-        </section>
+        </div>
 
         <section id="courses" class="courses-section">
             <h2>Current Semester Courses @ FIT</h2>
@@ -146,7 +144,7 @@
         <section class="score-section">
             <h2>Previous HTML Test Score</h2>
             <div class="score-container">
-                <iframe srcdoc="<body style='font-family:sans-serif; text-align:center; padding:20px;'><h2 style='color:green;'>Result: 95/100</h2><p>Excellent work on the DOM manipulation exercise!</p></body>" width="100%" height="150" style="border: 2px dashed #ccc; background: #fff;"></iframe>
+                <iframe srcdoc="<body style='font-family:sans-serif; text-align:center; padding:20px;'><h2 style='color:green;'>Result: 95/100</h2><p>Excellent work on the DOM manipulation exercise!</p></body>" height="150" style="width: 100%; border: 2px dashed #ccc; background: #fff;"></iframe>
             </div>
         </section>
 
@@ -162,7 +160,7 @@
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
                 <a href="#"><i class="fab fa-github"></i></a>
             </div>
-            <p>&copy; 2025 SnowFlakes. All rights reserved.</p>
+            <p>&copy; 2025 [Your Name]. All rights reserved.</p>
             <p><small><a href="https://validator.w3.org/check?uri=referer">Validate HTML</a></small></p>
         </div>
     </footer>
