--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me | My Personal Blog</title>
+    <title>SnowFlakes' Personal Blog</title>
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
@@ -12,7 +13,8 @@
 
     <header>
         <div class="container header-content">
-            <div class="logo">My<span>Blog</span>.</div>
+            <div class="logo">SF<span>Blog</span>.</div>
+            
             <div class="menu-toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -35,26 +37,26 @@
         <section id="about" class="about-section">
             <div class="profile-card">
                 <figure>
-                    <img src="https://via.placeholder.com/200" alt="Profile Picture">
-                    <figcaption>Hi, I'm [Your Name]</figcaption>
+                    <img src="/images/nadeshiko.jpg" alt="SnowFlakes Profile Picture">
+                    <figcaption>Hi, I'm SnowFlakes</figcaption>
                 </figure>
                 
                 <div class="personal-details">
                     <h1>About Me</h1>
                     <ul class="info-list">
-                        <li><strong>Birthday:</strong> January 1, 2004</li>
+                        <li><strong>Birthday:</strong> April 18, 2005</li>
                         <li><strong>Hometown:</strong> Hanoi, Vietnam</li>
-                        <li><strong>University:</strong> FIT - Hanoi University</li>
+                        <li><strong>University:</strong> Hanoi University</li>
+                        <li><strong>Faculty:</strong> Faculty of Information Technology (FIT)</li>
                     </ul>
 
                     <div class="bio">
-                        <p>
-                            I am a passionate <b>web developer</b> who loves building interactive applications. 
-                            My journey began when I wrote my first line of <i>HTML code</i> in high school. 
-                            I believe that <b>technology</b> has the power to change the world for the better. 
-                            Currently, I am focusing on mastering <i>Full Stack Development</i> and AI integration. 
-                            In my free time, I enjoy exploring the <b>streets of Hanoi</b> with my camera.
-                        </p>
+                        <ul class="bio-list">
+                            <li>Hello, you can call me <b>SnowFlakes</b>, a 20-year-old IT student at Hanoi University and a rhythm game enthusiast in Hanoi, Vietnam.</li>
+                            <li>I'm also a manga and anime lover, mostly like romance and Slice-of-Life shows.</li>
+                            <li>I am a passionate <b>web developer</b> who loves building interactive applications.</li>
+                            <li>I believe that <b>technology</b> has the power to change the world for the better.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -62,8 +64,8 @@
 
         <div class="quote-section">
             <blockquote>
-                "The only way to do great work is to love what you do."
-                <cite>- Steve Jobs</cite>
+                <span id="quote-text">"The only way to do great work is to love what you do."</span>
+                <cite id="quote-author">- Steve Jobs</cite>
             </blockquote>
         </div>
 
@@ -160,7 +162,7 @@
                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
                 <a href="#"><i class="fab fa-github"></i></a>
             </div>
-            <p>&copy; 2025 [Your Name]. All rights reserved.</p>
+            <p>&copy; 2025 SnowFlakes. All rights reserved.</p>
             <p><small><a href="https://validator.w3.org/check?uri=referer">Validate HTML</a></small></p>
         </div>
     </footer>
