--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SnowFlakes' Personal Blog</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
@@ -50,7 +50,7 @@
         <section id="about" class="about-section">
             <div class="profile-card">
                 <figure>
-                    <img src="358701873_182955434640801_3703214409150819182_n.jpg" alt="SnowFlakes Profile Picture">
+                    <img src="/images/nadeshiko.jpg" alt="SnowFlakes Profile Picture">
                     <figcaption>Hi, I'm SnowFlakes</figcaption>
                 </figure>
                 
