--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <section id="about" class="about-section">
             <div class="profile-card">
                 <figure>
-                    <img src="/images/nadeshiko.jpg" alt="SnowFlakes Profile Picture">
+                    <img src="/images/nadeshiko.jpg" alt="SnowFlakes' Profile Picture">
                     <figcaption>Hi, I'm SnowFlakes</figcaption>
                 </figure>
                 
@@ -156,7 +156,7 @@
             </div>
         </section>
 
-        </main>
+    </main>
 
     <footer id="social">
         <div class="container">
@@ -173,10 +173,7 @@
                 <a href="https://github.com/snowflakescoding" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
                 
                 <a href="https://osu.ppy.sh/users/19207842" target="_blank" title="osu!" class="osu-link">
-                    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" style="width: 20px; height: 20px; fill: white; vertical-align: middle;">
-                        <circle cx="256" cy="256" r="256" fill="#ff66aa"/>
-                        <path d="M352.1,254.6c0-62.5-44.5-91.1-102.3-91.1c-51.5,0-85.3,21.8-85.3,64c0,28.9,18,48,51.8,55.8 c-10,9.7-16.7,23.1-16.7,37.8c0,32.1,29.5,57.1,65.4,57.1c32.7,0,60.3-20.5,64.7-48.1c11.5-6.4,19.9-19.3,19.9-34 C349.6,281.5,351.4,267.4,352.1,254.6z M265.6,359.5c-23.7,0-43-16-43-36.6s19.3-36.6,43-36.6s43,16,43,36.6S289.3,359.5,265.6,359.5 z M258.6,236.4c-39.8-5.8-55.8-23.1-55.8-43c0-23.7,21.2-39.8,55.8-39.8c34.6,0,64.8,25.7,64.8,49.4 C323.3,220.4,293.2,241.6,258.6,236.4z" fill="#ffffff"/>
-                    </svg>
+                    <img src="/images/osu.png" alt="osu!" class="social-img-icon">
                 </a>
             </div>
             <p>&copy; 2025 SnowFlakes. All rights reserved.</p>
