--- a/favourites.html
+++ b/favourites.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | SnowFlakes' Blog</title>
+    <title>Favorites | SnowFlakes' Blog</title>
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -36,20 +36,34 @@
     </header>
 
     <main class="container">
-        <section class="welcome-section">
-            <h1>Welcome to My Digital Space</h1>
-            <p>
-                Hi, I'm <b>SnowFlakes</b>. This is my personal corner of the internet where I share my journey as an IT student, web developer, and rhythm game enthusiast.
-            </p>
-            <p>
-                Feel free to explore my background, check out what I'm studying at FIT, or see my favorite movies and games.
-            </p>
-            
-            <div class="welcome-buttons">
-                <a href="about.html" class="btn">Read About Me</a>
-                <a href="resume.html" class="btn btn-secondary">View Resume</a>
+        
+        <section class="favorites-section">
+            <h2>My Top 3 Favorites</h2>
+            <div class="media-grid">
+                <div class="media-item">
+                    <a href="https://www.imdb.com/title/tt0133093/" target="_blank">
+                        <img src="https://via.placeholder.com/300x450?text=The+Matrix" alt="The Matrix Poster">
+                        <h3>The Matrix</h3>
+                    </a>
+                    <p>My favorite sci-fi movie of all time.</p>
+                </div>
+                <div class="media-item">
+                    <a href="https://www.goodreads.com/book/show/3735293-clean-code" target="_blank">
+                        <img src="https://via.placeholder.com/300x450?text=Clean+Code" alt="Clean Code Book Cover">
+                        <h3>Clean Code</h3>
+                    </a>
+                    <p>The book that changed how I write software.</p>
+                </div>
+                <div class="media-item">
+                    <a href="https://www.imdb.com/title/tt0944947/" target="_blank">
+                        <img src="https://via.placeholder.com/300x450?text=Game+of+Thrones" alt="GOT Poster">
+                        <h3>Game of Thrones</h3>
+                    </a>
+                    <p>A masterclass in storytelling.</p>
+                </div>
             </div>
         </section>
+
     </main>
 
     <footer id="social">
