--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | SnowFlakes' Blog</title>
+    <title>Resume | SnowFlakes' Blog</title>
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -36,20 +36,36 @@
     </header>
 
     <main class="container">
-        <section class="welcome-section">
-            <h1>Welcome to My Digital Space</h1>
-            <p>
-                Hi, I'm <b>SnowFlakes</b>. This is my personal corner of the internet where I share my journey as an IT student, web developer, and rhythm game enthusiast.
-            </p>
-            <p>
-                Feel free to explore my background, check out what I'm studying at FIT, or see my favorite movies and games.
-            </p>
-            
-            <div class="welcome-buttons">
-                <a href="about.html" class="btn">Read About Me</a>
-                <a href="resume.html" class="btn btn-secondary">View Resume</a>
-            </div>
-        </section>
+        
+        <h1 style="text-align: center; margin-bottom: 40px;">My Resume</h1>
+
+        <div class="content-grid">
+            <article class="card">
+                <h2><i class="fas fa-trophy"></i> Achievements</h2>
+                <ul>
+                    <li>Winner of the 2024 Coding Hackathon.</li>
+                    <li>Dean's List for Academic Excellence (2023).</li>
+                    <li>Certified JavaScript Developer.</li>
+                </ul>
+            </article>
+
+            <article class="card">
+                <h2><i class="fas fa-graduation-cap"></i> Education</h2>
+                <ul>
+                    <li><strong>Bachelor of IT</strong>, FIT (2022 - Present)</li>
+                    <li><strong>High School Diploma</strong>, Hanoi Amsterdam (2019 - 2022)</li>
+                </ul>
+            </article>
+
+            <article class="card">
+                <h2><i class="fas fa-briefcase"></i> Work Experience</h2>
+                <ul>
+                    <li><strong>Intern Web Dev</strong> at TechCorp (Summer 2024)</li>
+                    <li><strong>Freelance Designer</strong> (2022 - Present)</li>
+                </ul>
+            </article>
+        </div>
+
     </main>
 
     <footer id="social">
