--- a/courses.html
+++ b/courses.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | SnowFlakes' Blog</title>
+    <title>Courses | SnowFlakes' Blog</title>
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -36,20 +36,18 @@
     </header>
 
     <main class="container">
-        <section class="welcome-section">
-            <h1>Welcome to My Digital Space</h1>
-            <p>
-                Hi, I'm <b>SnowFlakes</b>. This is my personal corner of the internet where I share my journey as an IT student, web developer, and rhythm game enthusiast.
-            </p>
-            <p>
-                Feel free to explore my background, check out what I'm studying at FIT, or see my favorite movies and games.
-            </p>
-            
-            <div class="welcome-buttons">
-                <a href="about.html" class="btn">Read About Me</a>
-                <a href="resume.html" class="btn btn-secondary">View Resume</a>
-            </div>
+        
+        <section class="courses-section">
+            <h2>Current Semester Courses @ FIT</h2>
+            <ol>
+                <li>Introduction to Web Design</li>
+                <li>Data Structures and Algorithms</li>
+                <li>Computer Architecture</li>
+                <li>Linear Algebra</li>
+                <li>Database Management Systems</li>
+            </ol>
         </section>
+
     </main>
 
     <footer id="social">
