--- a/about.html
+++ b/about.html
@@ -30,6 +30,7 @@
                     <li><a href="resume.html">Resume</a></li>
                     <li><a href="courses.html">Courses</a></li>
                     <li><a href="favorites.html">Favorites</a></li>
+                    <li><a href="people.html">People</a></li>
                 </ul>
             </nav>
         </div>
@@ -71,15 +72,6 @@
                 <cite id="quote-author">- Steve Jobs</cite>
             </blockquote>
         </div>
-
-        <section class="neighbor-section">
-            <h2><i class="fas fa-users"></i> My Neighbor / TA</h2>
-            <p>
-                Since I am sitting next to my friend <strong>Minh</strong>, I'd like to share a bit about him. 
-                Minh is an avid gamer and a genius at Python. He often helps me debug my code when I get stuck on logic errors.
-                We share a love for mechanical keyboards and often trade keycaps during breaks.
-            </p>
-        </section>
 
     </main>
 
