--- a/courses.html
+++ b/courses.html
@@ -30,6 +30,7 @@
                     <li><a href="resume.html">Resume</a></li>
                     <li><a href="courses.html">Courses</a></li>
                     <li><a href="favorites.html">Favorites</a></li>
+                    <li><a href="people.html">People</a></li>
                 </ul>
             </nav>
         </div>
