--- a/resume.html
+++ b/resume.html
@@ -30,6 +30,7 @@
                     <li><a href="resume.html">Resume</a></li>
                     <li><a href="courses.html">Courses</a></li>
                     <li><a href="favorites.html">Favorites</a></li>
+                    <li><a href="people.html">People</a></li>
                 </ul>
             </nav>
         </div>
@@ -40,11 +41,19 @@
         <h1 style="text-align: center; margin-bottom: 40px;">My Resume</h1>
 
         <div class="content-grid">
+            
             <article class="card">
-                <h2><i class="fas fa-trophy"></i> Achievements</h2>
+                <h2><i class="fas fa-gamepad"></i> Game Achievements</h2>
                 <ul>
-                    <li>Winner of the 2024 Coding Hackathon.</li>
-                    <li>Dean's List for Academic Excellence (2023).</li>
+                    <li>Top 24 of the <a href="https://osu.ppy.sh/community/forums/topics/1942540?n=1" target="_blank" style="color: var(--accent-color); font-weight: bold;">4 Digit Catch World Cup 2025</a></li>
+                    <li>Top 6 of the <a href="https://osu.ppy.sh/community/forums/topics/2083865?n=1" target="_blank" style="color: var(--accent-color); font-weight: bold;">Intermediate Global Taiko Showdown 2025</a></li>
+                    <li>Top 8 of the <a href="https://osu.ppy.sh/community/forums/topics/2106432?n=1" target="_blank" style="color: var(--accent-color); font-weight: bold;">Vietnam osu!taiko Tournament 5</a></li>
+                </ul>
+            </article>
+
+            <article class="card">
+                <h2><i class="fas fa-trophy"></i> Life Achievements</h2>
+                <ul>
                     <li>Certified JavaScript Developer.</li>
                 </ul>
             </article>
@@ -52,16 +61,15 @@
             <article class="card">
                 <h2><i class="fas fa-graduation-cap"></i> Education</h2>
                 <ul>
-                    <li><strong>Bachelor of IT</strong>, FIT (2022 - Present)</li>
-                    <li><strong>High School Diploma</strong>, Hanoi Amsterdam (2019 - 2022)</li>
+                    <li><strong>Bachelor of IT</strong>, Hanoi University (2023 - Present)</li>
+                    <li><strong>High School Diploma</strong>, Foreign Language Specialized School (2020 - 2023)</li>
                 </ul>
             </article>
 
             <article class="card">
                 <h2><i class="fas fa-briefcase"></i> Work Experience</h2>
                 <ul>
-                    <li><strong>Intern Web Dev</strong> at TechCorp (Summer 2024)</li>
-                    <li><strong>Freelance Designer</strong> (2022 - Present)</li>
+                    <li><strong>Freelance Developer</strong> (2023 - Present)</li>
                 </ul>
             </article>
         </div>
