--- a/courses.html
+++ b/courses.html
@@ -27,10 +27,10 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="resume.html">Resume</a></li>
-                    <li><a href="courses.html">Courses</a></li>
-                    <li><a href="favorites.html">Favorites</a></li>
+                    <li><a href="life.html">Life</a></li>
                     <li><a href="people.html">People</a></li>
+                    <li><a href="favorites.html">Favorites</a></li>
+                    <li><a href="courses.html">Courses</a></li>
                 </ul>
             </nav>
         </div>
