--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="resume.html">Resume</a></li>
-                    <li><a href="courses.html">Courses</a></li>
-                    <li><a href="favorites.html">Favorites</a></li>
+                    <li><a href="life.html">Life</a></li>
                     <li><a href="people.html">People</a></li>
+                    <li><a href="favorites.html">Favorites</a></li>
+                    <li><a href="courses.html">Courses</a></li>
                 </ul>
             </nav>
         </div>
@@ -50,8 +50,8 @@
             </p>
             
             <div class="welcome-buttons">
-                <a href="about.html" class="btn btn-secondary">Read About Me</a>
-                <a href="resume.html" class="btn btn-secondary">View Resume</a>
+                <a href="about.html" class="btn btn-secondary">About Me</a>
+                <a href="life.html" class="btn btn-secondary">Life</a>
             </div>
         </section>
     </main>
