--- a/life.html
+++ b/life.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume | SnowFlakes' Blog</title>
+    <title>Life | SnowFlakes' Blog</title>
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -27,10 +27,10 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="resume.html">Resume</a></li>
-                    <li><a href="courses.html">Courses</a></li>
-                    <li><a href="favorites.html">Favorites</a></li>
+                    <li><a href="life.html">Life</a></li>
                     <li><a href="people.html">People</a></li>
+                    <li><a href="favorites.html">Favorites</a></li>
+                    <li><a href="courses.html">Courses</a></li>
                 </ul>
             </nav>
         </div>
