--- a/courses.html
+++ b/courses.html
@@ -39,14 +39,57 @@
     <main class="container">
         
         <section class="courses-section">
-            <h2>Current Semester Courses @ FIT</h2>
-            <ol>
-                <li>Introduction to Web Design</li>
-                <li>Data Structures and Algorithms</li>
-                <li>Computer Architecture</li>
-                <li>Linear Algebra</li>
-                <li>Database Management Systems</li>
-            </ol>
+            <h2 style="margin-bottom: 30px;">Studied Courses</h2>
+
+            <button class="accordion"><i class="fas fa-university"></i> FIT HANU</button>
+            <div class="panel">
+                <div class="semester-grid">
+                    
+                    <div class="semester-box">
+                        <h3>1st & 2nd Semester</h3>
+                        <p>B1 & B2 English</p>
+                    </div>
+
+                    <div class="semester-box">
+                        <h3>3rd Semester</h3>
+                        <p>Calculus, Discrete Mathematics, Programming One (Java), Principal of Operating Systems, Principles of Computing, Research Skill</p>
+                    </div>
+
+                    <div class="semester-box">
+                        <h3>4th Semester</h3>
+                        <p>Programming Two (Java), Probability and Statistics, Computer Network, Introduction to Information Security, Data Structures and Algorithms, Project Management</p>
+                    </div>
+
+                    <div class="semester-box">
+                        <h3>5th Semester</h3>
+                        <p>System Analysis and Design, Special Subject One (Python), Web Programming, Database, Software Engineering, Artificial Intelligence</p>
+                    </div>
+
+                    <div class="semester-box">
+                        <h3>6th Semester</h3>
+                        <p>Network Security, Big Data Mining, Special Subject Two (Website Project), Mobile Programming, Infomation System Design, Human Computer Interaction</p>
+                    </div>
+
+                    <div class="semester-box">
+                        <h3>7th Semester</h3>
+                        <p>N/A</p>
+                    </div>
+
+                    <div class="semester-box">
+                        <h3>8th Semester</h3>
+                        <p>N/A</p>
+                    </div>
+
+                </div>
+            </div>
+
+            <button class="accordion"><i class="fas fa-folder-open"></i> Others</button>
+            <div class="panel">
+                <div style="padding: 20px 0;">
+                    <p>N/A</p>
+                </div>
+            </div>
+
         </section>
 
     </main>
