--- a/courses.html
+++ b/courses.html
@@ -39,7 +39,7 @@
     <main class="container">
         
         <section class="courses-section">
-            <h2 style="margin-bottom: 30px;">Studied Courses</h2>
+            <h2 style="margin-bottom: 30px; text-align: center;">Studied Courses</h2>
 
             <button class="accordion"><i class="fas fa-university"></i> FIT HANU</button>
             <div class="panel">
@@ -47,37 +47,71 @@
                     
                     <div class="semester-box">
                         <h3>1st & 2nd Semester</h3>
-                        <p>B1 & B2 English</p>
+                        <ul>
+                            <li>B1 & B2 English</li>
+                        </ul>
                     </div>
 
                     <div class="semester-box">
                         <h3>3rd Semester</h3>
-                        <p>Calculus, Discrete Mathematics, Programming One (Java), Principal of Operating Systems, Principles of Computing, Research Skill</p>
+                        <ul>
+                            <li>Calculus</li>
+                            <li>Discrete Mathematics</li>
+                            <li>Programming One (Java)</li>
+                            <li>Principal of Operating Systems</li>
+                            <li>Principles of Computing</li>
+                            <li>Research Skill</li>
+                        </ul>
                     </div>
 
                     <div class="semester-box">
                         <h3>4th Semester</h3>
-                        <p>Programming Two (Java), Probability and Statistics, Computer Network, Introduction to Information Security, Data Structures and Algorithms, Project Management</p>
+                        <ul>
+                            <li>Programming Two (Java)</li>
+                            <li>Probability and Statistics</li>
+                            <li>Computer Network</li>
+                            <li>Introduction to Information Security</li>
+                            <li>Data Structures and Algorithms</li>
+                            <li>Project Management</li>
+                        </ul>
                     </div>
 
                     <div class="semester-box">
                         <h3>5th Semester</h3>
-                        <p>System Analysis and Design, Special Subject One (Python), Web Programming, Database, Software Engineering, Artificial Intelligence</p>
+                        <ul>
+                            <li>System Analysis and Design</li>
+                            <li>Special Subject One (Python)</li>
+                            <li>Web Programming</li>
+                            <li>Database</li>
+                            <li>Software Engineering</li>
+                            <li>Artificial Intelligence</li>
+                        </ul>
                     </div>
 
                     <div class="semester-box">
                         <h3>6th Semester</h3>
-                        <p>Network Security, Big Data Mining, Special Subject Two (Website Project), Mobile Programming, Infomation System Design, Human Computer Interaction</p>
+                        <ul>
+                            <li>Network Security</li>
+                            <li>Big Data Mining</li>
+                            <li>Special Subject Two (Website Project)</li>
+                            <li>Mobile Programming</li>
+                            <li>Information System Design</li>
+                            <li>Human Computer Interaction</li>
+                        </ul>
                     </div>
 
                     <div class="semester-box">
                         <h3>7th Semester</h3>
-                        <p>N/A</p>
+                        <ul>
+                            <li>N/A</li>
+                        </ul>
                     </div>
 
                     <div class="semester-box">
                         <h3>8th Semester</h3>
-                        <p>N/A</p>
+                        <ul>
+                            <li>N/A</li>
+                        </ul>
                     </div>
 
                 </div>
@@ -86,7 +120,9 @@
             <button class="accordion"><i class="fas fa-folder-open"></i> Others</button>
             <div class="panel">
                 <div style="padding: 20px 0;">
-                    <p>N/A</p>
+                    <ul>
+                        <li>N/A</li>
+                    </ul>
                 </div>
             </div>
 
