--- a/courses.html
+++ b/courses.html
@@ -39,7 +39,7 @@
     <main class="container">
         
         <section class="courses-section">
-            <h2 style="margin-bottom: 30px;">Studied Courses</h2>
+            <h2 style="margin-bottom: 30px; text-align: center;">Studied Courses</h2>
 
             <button class="accordion"><i class="fas fa-university"></i> FIT HANU</button>
             <div class="panel">
@@ -67,7 +67,7 @@
 
                     <div class="semester-box">
                         <h3>6th Semester</h3>
-                        <p>Network Security, Big Data Mining, Special Subject Two (Website Project), Mobile Programming, Infomation System Design, Human Computer Interaction</p>
+                        <p>Network Security, Big Data Mining, Special Subject Two (Website Project), Mobile Programming, Information System Design, Human Computer Interaction</p>
                     </div>
 
                     <div class="semester-box">
